Changes for 3.4.8rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.4.7

3.4.7rc2 was released as 3.4.7 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.7rc2

Bug fixes:
.......P.. [ZBX-13403] allowed proxy to execute remote commands on agents using encrypted connection (gleb)
.......PS. [ZBX-13441] fixed crashes in case of failures (e.g. timeouts) during VMware hypervisor discovery (gleb)
A.F....... [ZBX-12607] fixed performance of map.get API method and map-related views (miks, Sasha)
....I..... [ZBX-13055] fixed compilation failure in Alpine Linux due to missing res_ninit() function (vso)

--------------------------------------------------------------------------------
Changes for 3.4.7rc1

Bug fixes:
........S. [ZBX-13194] fixed incorrect processing of zabbix[wcache,value,*] internal check (Sergejs)
.......PS. [ZBX-13060] added limitation for meaningless server reconnection attempts to incorrectly configured passive proxy (viktors)
...G...... [ZBX-13117] fixed vfs.dir.size with symbol links on Windows (MVekslers)
........S. [ZBX-12643] improved error log message in case Zabbix server database cannot be used due to empty "users" table (vso)
...G...... [ZBX-11720] fixed memory leak which breaks vfs.fs.size, vfs.fs.inode and vfs.dir.size items if compiled with LeakSanitizer (Andris)
........S. [ZBX-13131] fixed truncated multiline text values from network discovery SNMP checks (viktors)
........S. [ZBX-13343] fixed last trends update clock caching (wiper)
A......... [ZBX-13325] fixed trend.get() method with Oracle backend (Sasha)
..F....... [ZBX-13223] fixed graphs duplication in graph preview (ashubin)
...G...... [ZBX-13055] fixed problems with DNS resolver interface on NetBSD (valdis)
..F....... [ZBX-13345] removed SID from URL in screen edit mode (miks)